--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 </head>
 <body>
     <h1>Hardwaremaquina</h1>
-    <p class="info-paragraph">Reparar es un acto de rebeldía</p>
+    <p class="info-paragraph">Reparar es un acto de rebeldía en una sociedad consumista</p>
 	
     <div class="link-container">
         
@@ -75,9 +75,10 @@
             <a href="https://www.tiktok.com/@hardwaremaquina" target="_blank">Tiktok</a>
             <p>Mira mis videos</p>
         </div>
-		<p>Donemen a mi wallet para no tener que chambear</p>
+		<p>Dóneme en mi wallet para no tener que chambear</p>
 		<p>xeF7b6Ea1F2b6bf10764E9D80730654bB1d6B49c2</p>
 		
     </div>
 </body>
 </html>
+
