--- a/index.html
+++ b/index.html
@@ -82,10 +82,12 @@
 		
     </div>
 	
-	<p class="info-paragraph">Dóneme en mi wallet para no tener que chambear</p>
-	<p class="info-paragraph" >xeF7b6Ea1F2b6bf10764E9D80730654bB1d6B49c2</p>
 </body>
+	
+	<p class="info-paragraph">Dóneme en mi wallet de eth para no tener que chambear</p>
+	<p class="info-paragraph" >xeF7b6Ea1F2b6bf10764E9D80730654bB1d6B49c2</p>
 </html>
+
 
 
 
