--- a/index.html
+++ b/index.html
@@ -38,13 +38,18 @@
             transform: scale(1.05);
             box-shadow: 0 0 20px #00ffcc;
         }
-        a {
-            color: #00ffcc;
-            text-decoration: none;
-            font-size: 24px;
-            display: flex;
-            align-items: center;
-        }
+       a {
+    color: #00ffcc;
+    text-decoration: none;
+    font-size: 24px;
+    display: flex;
+    align-items: center;
+}
+
+a i {
+    margin-right: 15px; /* Agrega espacio entre el ícono y el texto */
+}
+
         a img {
             width: 24px;
             height: 24px;
@@ -142,6 +147,7 @@
 	 </footer>
 </body>
 </html>
+
 
 
 
