--- a/index.html
+++ b/index.html
@@ -7,91 +7,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     <title>Redes Sociales de Hardwaremaquina</title>
-    <style>
-        body {
-            background: linear-gradient(135deg, #0f0c29, #302b63, #24243e);
-            color: #0000FF;
-            font-family: 'Raleway', sans-serif;
-            text-align: center;
-            padding: 20px;
-            margin: 0;
-            min-height: 200vh; /* Permitir el desplazamiento */
-			background-size: cover;
-			background-attachment: fixed; 
-        }
-        .link-container {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            margin: 20px 0;
-        }
-        .link-card {
-            background: rgba(0, 0, 0, 0.7);
-            border: 2px solid #00ffcc;
-            border-radius: 10px;
-            padding: 15px;
-            margin: 10px;
-            width: 250px;
-            transition: transform 0.3s, box-shadow 0.3s;
-        }
-        .link-card:hover {
-            transform: scale(1.05);
-            box-shadow: 0 0 20px #00ffcc;
-        }
-       a {
-    color: #00ffcc;
-    text-decoration: none;
-    font-size: 24px;
-    display: flex;
-    align-items: center;
-}
-
-a i {
-    margin-right: 15px; /* Agrega espacio entre el ícono y el texto */
-}
-
-        a img {
-            width: 24px;
-            height: 24px;
-            margin-right: 10px;
-        }
-        .info-paragraph {
-            color: #ffcc00;
-            font-size: 20px;
-            margin: 20px 0;
-        }
-
-        @media (max-width: 600px) {
-            a {
-                font-size: 18px;
-            }
-            .info-paragraph {
-                font-size: 16px;
-            }
-            h1 {
-                font-size: 1em;
-            }
-            body {
-                font-size: 18px;
-            }
-            .icon {
-                font-size: 18px;
-            }
-        }
-        .icon {
-            color: #3f51b5;
-            font-size: 36px;
-        }
-        h1 {
-            font-size: 3em;
-            color: #ffcc00;
-            text-shadow: 2px 2px 0px #000, 4px 4px 0px #ff5733;
-            letter-spacing: 2px;
-        }
-    </style>
+  <link rel="stylesheet" href="estilos.css">
 </head>
 <body>
-    <h1>Hardwaremaquina</h1>
+    <h1>Hardware</br>maquina</h1>
     <p class="info-paragraph">Reparar es un acto de rebeldía en una sociedad consumista</p>
 
     <div class="link-container">
@@ -132,7 +51,7 @@ a i {
             </a>
         </div>
 		<div class="link-card">
-            <a href="https://t.me/hardwaremaquina" target="_blank">
+            <a href="https://www.instagram.com/hardwaremaquina?igsh=YzljYTk1ODg3Zg==" target="_blank">
                 <i class="fab fa-instagram"></i>
                 <p> mi insta </p>
             </a>
@@ -140,13 +59,12 @@ a i {
 		
     </div>
 
-
  <footer>
-    <p class="info-paragraph">Dóneme en mi wallet de ETH para no tener que chambear</p>
-    <p class="info-paragraph">xeF7b6Ea1F2b6bf10764E989D80730654bB1d6B49c2</p>
+    <p class="info-paragraph">Dóneme en mi wallet de ETH para no tener que chambear</br>xeF7b6Ea1F2b6bf10764E989D80730654bB1d6B49c2</p>
 	 </footer>
 </body>
 </html>
+
 
 
 
