--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <link rel="icon" href="icono.ico" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
+		<link
+  rel="stylesheet"
+  href="https://cdn.jsdelivr.net/npm/bulma@1.0.4/css/bulma.min.css"
+>
     <title>Redes Sociales de Hardwaremaquina</title>
   <link rel="stylesheet" href="estilos.css">
 </head>
@@ -64,3 +68,4 @@
 	 </footer>
 </body>
 </html>
+
