--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="icon" href="icono.ico" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
-		<link
+	<link
   rel="stylesheet"
   href="https://cdn.jsdelivr.net/npm/bulma@1.0.4/css/bulma.min.css"
 >
@@ -23,14 +23,14 @@
         <div class="link-card">
             <a href="https://pin.it/KRkb5EZvw" target="_blank">
                 <i class="fab fa-pinterest"></i>
-                <p> Fotos de la chatarra</p>
+                <p> Fotos</p>
             </a>
         </div>
 
         <div class="link-card">
             <a href="https://github.com/Rocket8837" target="_blank">
                 <i class="fab fa-github"></i>
-                <p> Puro código en cmd</p>
+                <p> código</p>
             </a>
         </div>
 
@@ -51,7 +51,7 @@
 		<div class="link-card">
             <a href="https://t.me/hardwaremaquina" target="_blank">
                 <i class="fab fa-telegram"></i>
-                <p> Canal de telegram </p>
+                <p>La deepweb</p>
             </a>
         </div>
 		<div class="link-card">
@@ -68,4 +68,3 @@
 	 </footer>
 </body>
 </html>
-
