Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div class="link-card">
             <a href="https://github.com/Rocket8837" target="_blank">
                 <i class="fab fa-github"></i>
-                <p> código</p>
+                <p> Código</p>
             </a>
         </div>
 
@@ -57,14 +57,15 @@
 		<div class="link-card">
             <a href="https://www.instagram.com/hardwaremaquina?igsh=YzljYTk1ODg3Zg==" target="_blank">
                 <i class="fab fa-instagram"></i>
-                <p> mi insta </p>
+                <p> Mi insta </p>
             </a>
         </div>
 		
     </div>
 
  <footer>
-    <p class="info-paragraph">Dóneme en mi wallet de ETH para no tener que chambear</br>xeF7b6Ea1F2b6bf10764E989D80730654bB1d6B49c2</p>
+    <p class="info-paragraph">Dóneme en mi wallet de ETH para no tener que chambear</br>xeF7b6Ea1F2b6bf10764E989D80730654</br>bB1d6B49c2</p>
 	 </footer>
 </body>
 </html>
+
