Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 		<div class="link-card">
             <a href="https://www.youtube.com/@emsamblador64" target="_blank">
                 <i class="fab fa-youtube"></i>
-                <p> mi canal</p>
+                <p> Mi canal</p>
             </a>
         </div>
 		<div class="link-card">
@@ -68,4 +68,5 @@
 	 </footer>
 </body>
 </html>
+
 
